fix mystory page overflow issue

--- a/src/components/otherProjectButton.scss
+++ b/src/components/otherProjectButton.scss
@@ -1,6 +1,6 @@
 @import "../variable";
 
-a {
+.backButton {
   text-transform: uppercase;
   font-weight: 900;
   font-size: 14px;
